--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 30vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,4 +35,56 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.wrapper {
+  padding-top: 150px;
+  padding-bottom: 150px;
+}
+
+.title {
+  margin-top: 0px;
+}
+
+.timer {
+  font-size: 36px;
+}
+
+.button {
+  display: inline-block;
+  padding: 5px 10px;
+
+  font-size: 20px;
+  color: #fff;
+  background-color: #282c34;
+  border-radius: 4px;
+}
+
+.button:not(:last-child) {
+  margin-right: 15px;
+}
+
+.footterWrapper {
+  min-height: 30vh;
+  background-color: #282c34;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.githubLink {
+  padding: 5px 15px;
+
+  text-decoration: none;
+  background-color: #fff;
+  color: #282c34;
+  border-radius: 4px;
+  transform: scale(1);
+  transition: all 300ms linear;
+}
+
+.githubLink:hover {
+  background-color: green;
+  transform: scale(1.2);
 }
