--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,7 @@
 
 .title {
   margin-top: 0px;
+  color: #212121;
 }
 
 .timer {
@@ -56,7 +57,7 @@
 
   font-size: 20px;
   color: #fff;
-  background-color: #282c34;
+  background-color: #545861;
   border-radius: 4px;
 }
 
@@ -64,10 +65,21 @@
   margin-right: 15px;
 }
 
-.footterWrapper {
-  min-height: 30vh;
+button:hover,
+button:focus {
+  cursor: pointer;
   background-color: #282c34;
+}
 
+.footterWrapper {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  /* padding: 25px 50px 25px 50px; */
+  padding-top: 25px;
+  padding-bottom: 25px;
+
+  background-color: #282c34;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -84,7 +96,9 @@
   transition: all 300ms linear;
 }
 
-.githubLink:hover {
+.githubLink:hover,
+.githubLink:focus {
   background-color: green;
   transform: scale(1.2);
+  outline: none;
 }
